# monster-rpg-3

./: CMakeLists.txt  Monster_RPG_3.manifest  README.txt  versioninfo.rc
Nooskewl_Shim/: CMakeLists.txt  LICENSE.txt  tilemap.diff  versioninfo.rc
Nooskewl_Shim/include/Nooskewl_Shim/: Nooskewl_Shim.h  a_star.h  achievements.h  apple.h  audio.h  basic_types.h  cd.h  cloud.h  cpa.h  crash.h  error.h  font.h  gfx.h  gui.h  image.h  image_base.h  input.h  ios.h  json.h  macosx.h  main.h  md5.h  mml.h  model.h  mt.h  pixel_font.h  primitives.h  sample.h  shader.h  shim.h  sound.h  sprite.h  steamworks.h  tilemap.h  tokenizer.h  translation.h  ttf.h  utf8.h  util.h  vertex_cache.h  (+3 more)
Nooskewl_Shim/src/: a_star.cpp  achievements.cpp  apple.M  audio.cpp  cd.cpp  cloud.cpp  cpa.cpp  crash.cpp  error.cpp  font.cpp  gamecenter.M  gfx.cpp  gui.cpp  image.cpp  image_base.cpp  input.cpp  ios.M  json.cpp  macosx.M  md5.cpp  mml.cpp  model.cpp  mt19937ar.cpp  pixel_font.cpp  primitives.cpp  sample.cpp  shader.cpp  shim.cpp  sound.cpp  sprite.cpp  steamworks.cpp  tilemap.cpp  tokenizer.cpp  translation.cpp  ttf.cpp  utf8.cpp  util.cpp  vertex_cache.cpp  vorbis.cpp  x.cpp  (+1 more)
Nooskewl_Shim/tools/: iosaudio.diff  x11touch.diff
Nooskewl_Shim/tools/utils/: change_colour.cpp  compress_dir.cpp  convert_model.cpp  convert_tilemap.cpp  mkhpixelfont.cpp  mkhpixelfont.cpp.bak  mkpixelfont.cpp  pack_shader.cpp  play_mml.cpp  prune_sprite_json.cpp  randtile.cpp  savetool.c
Nooskewl_Wedge/: CMakeLists.txt  versioninfo.rc
Nooskewl_Wedge/example/: CMakeLists.txt
Nooskewl_Wedge/example/include/: area_game.h  battle_game.h  battles.h  (+9 more)
Nooskewl_Wedge/src/: a_star.cpp  area.cpp  area_game.cpp  battle_end.cpp  battle_enemy.cpp  battle_entity.cpp  battle_game.cpp  battle_player.cpp  branch.cpp  check_positions.cpp  chest.cpp  delay.cpp  delete_map_entity.cpp  fade.cpp  game.cpp  general.cpp  generic_callback.cpp  generic_gui.cpp  generic_immediate_callback.cpp  give_object.cpp  globals.cpp  input.cpp  inventory.cpp  look_around_input.cpp  main.cpp  map_entity.cpp  npc.cpp  omnipresent.cpp  onscreen_controller.cpp  pause_player_input.cpp  pause_presses.cpp  pause_sprite.cpp  pause_task.cpp  play_animation.cpp  play_music.cpp  play_sound.cpp  player_input.cpp  set_animation.cpp  set_direction.cpp  set_integer.cpp  (+17 more)
android-studio/: .gitignore
android-studio/app/: build.gradle
android-studio/tools/: inst.bat  inst.sh
apple/ios/: Info.plist  Launch Screen.storyboard  Monster RPG 3.entitlements  tvOS_Info.plist
data/text/: Brazilian.utf8  English.utf8  French.utf8  Spanish.utf8
docs/: 3rd_party.html  3rd_party.txt  3rd_party_tvos.html  English.xlsx  MONSTER RPG 3 - PORTUGUESE.xlsx  commandline.txt  manual_english.html  manual_english_tvos.html  manual_french.html  manual_french_tvos.html  manual_spanish.html  manual_spanish_tvos.html
docs/achievements/: achievements-english.txt  achievements-spanish.txt  achievements_fr.txt
docs/keywords/: keywords-english.txt  keywords-spanish.txt  keywords_fr.txt
docs/store_page/: new_desc-en-pt.txt  new_desc-en.txt  new_desc-fr.txt  new_desc-spanish.txt  new_short_desc-en-pt.txt  new_short_desc-en.txt  new_short_desc-fr.txt  new_short_desc-spanish.txt
include/: achievements.h  area_game.h  audio_settings.h  autosave.h  battle_game.h  battle_player.h  battle_transition_in2.h  battle_transition_out.h  battle_transition_out2.h  battles.h  bolt.h  buy_scroll.h  captain.h  controls_settings.h  cure.h  custom_slide_entity.h  dialogue.h  enemies.h  enemy_drawing_hook.h  fire.h  fishing.h  fishing_prize.h  general.h  globals.h  gui.h  gui_drawing_hook.h  heal.h  hit.h  ice.h  inn.h  inventory.h  jump.h  language_settings.h  menu.h  menu_game.h  milestones.h  monster_rpg_3.h  other_settings.h  play_animation_and_delete.h  question.h  (+21 more)
obsolete/amazon-project/: AndroidManifest.xml
obsolete/android-project/: AndroidManifest.xml
origdata/hlsl/: alpha_fragment.txt  alpha_test_fragment.txt  bander_fragment.txt  blur_fragment.txt  boss_die_fragment.txt  darken_fragment.txt  darken_textured_fragment.txt  darkness_fragment.txt  default_vertex.txt  enemy_die_fragment.txt  heat_wave_fragment.txt  lit_3d_vertex.txt  noo_default_fragment.txt  noo_default_textured_fragment.txt  noo_default_vertex.txt  noo_model_fragment.txt  solid_colour_fragment.txt
origdata/icons/: icon.icns
origdata/models/: dragon.blend  dragon.x  icicle.blend  icicle.x  zeus.blend  zeus.x
origdata/music/: boatin.flp  boss.flp  castle.mid  credits.flp  desert.flp  fanfare.flp  final_level.flp  final_level_midi.flp  forest.mid  gameover.mid  happy.flp  hh.flp  palace.flp  sleep.flp  village.flp
origdata/nes/: 01_the_squat.mml  02_worlds_largest.mml  03_deja_vu.mml  04_jumping_jacks.mml  05_blizzard.mml  06_homefest.mml  07_troutsneeze.mml  08_trainwreck.mml  09_boatin.mml  10_save_the_world.mml  11_minus_the_wind.mml  12_jolly_good.mml  13_top_of_a_mountain.mml  14_over_the_moon.mml  15_till_next_time.mml  crash.dmc  drum.dmc  kick.dmc  screen.nam
saves/: at_castle.json
src/: apple.M  area_game.cpp  audio_settings.cpp  battle_game.cpp  battle_player.cpp  battle_transition_in.cpp  battle_transition_in2.cpp  battle_transition_out.cpp  battle_transition_out2.cpp  battles.cpp  bolt.cpp  buy_scroll.cpp  captain.cpp  controls_settings.cpp  cure.cpp  custom_slide_entity.cpp  dialogue.cpp  enemies.cpp  enemy_drawing_hook.cpp  fire.cpp  fishing.cpp  fishing_prize.cpp  general.cpp  globals.cpp  gui.cpp  gui_drawing_hook.cpp  heal.cpp  hit.cpp  ice.cpp  inn.cpp  inventory.cpp  ios.M  jump.cpp  language_settings.cpp  menu.cpp  menu_game.cpp  monster_rpg_3.cpp  other_settings.cpp  play_animation_and_delete.cpp  question.cpp  (+19 more)
tgui3/: CMakeLists.txt  versioninfo.rc
tgui3/apple/ios/tgui3.xcodeproj/: project.pbxproj
tgui3/include/tgui3/: tgui3.h  tgui3_sdl.h
tgui3/src/: tgui3.cpp  tgui3_sdl.cpp
tools/: index_dialogue.sh  installer.nsi  my_sdl_android_diff.diff
tools/io_scene_x_goobliata/: __init__.py  export_x.py
tools/mac_dmg/: build.sh  full.json  sla.r
tools/title_art_shadow/: build.sh  shadow.cpp
(+795 files in other folders)
